--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="utf-8">
-    <title>My HTML File</title>
+    <title>Camel Package Version Diff Engine</title>
     <script src="lib/angular.min.107.js"></script>
     <script src="lib/bootstrap/js/bootstrap.js"></script>
     <script src="js/lib/angular-table.js"></script>
@@ -20,29 +20,24 @@
 
 <div class="container">
     <form ng-submit="diff()">
-        <p/>
+        <p>
 
         <h1>Camel Dependencies Version Differences</h1>
         <br/>
-
-        <p/>
-
         <p>
             Version 1: <select name="option" ng-model="v1" ng-options="o for o in optionsList"></select>
-        </p>
 
         <p>
             Version 2: <select name="option" ng-model="v2" ng-options="o for o in optionsList"></select>
 
         <p>
-
             <span class="btn btn-success fileinput-button" ng-class="{disabled: disabled}" ng-click="diff()">
                     <i class="glyphicon glyphicon-plus"></i>
                     <span>Diff</span>
             </span>
     </form>
+    <p>
 
-    </p>
     <h3>Added Packages</h3>
     <br/>
     <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="example">
@@ -62,8 +57,6 @@
             <td> {{ value }}</td>
         </tr>
     </table>
-
-
     <p/>
 
     <h3>Changed Packages</h3>
@@ -84,17 +77,6 @@
             <td> {{ value }}</td>
         </tr>
     </table>
-
-
-    <!--<table class="table table-striped table-bordered table-condensed">-->
-
-    <!--<angular-table model="added">-->
-    <!--<row on-selected="handleRowSelection(row)" selected-color="#87cefa"-->
-    <!--even-color="#ffffff" odd-color="#eeeeee">-->
-    <!--<column>111{{ row.key }}</column>-->
-    <!--</row>-->
-    <!--</angular-table>-->
-
 </div>
 </body>
 </html>
