code clean up and other changes

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -25,10 +25,10 @@
         <h1>Camel Dependencies Version Differences</h1>
         <br/>
         <p>
-            Version 1: <select name="option" ng-model="v1" ng-options="o for o in optionsList"></select>
+            Older Version: <select name="option" ng-model="v1" ng-options="o for o in optionsList"></select>
 
         <p>
-            Version 2: <select name="option" ng-model="v2" ng-options="o for o in optionsList"></select>
+            Newer Version: <select name="option" ng-model="v2" ng-options="o for o in optionsList"></select>
 
         <p>
             <span class="btn btn-success fileinput-button" ng-class="{disabled: disabled}" ng-click="diff()">
