--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -24,6 +24,12 @@
 
         <h1>Camel Dependencies Version Differences</h1>
         <br/>
+        <h5>
+            <a href="http://code.notsoclever.cc/camel-release-package-version-differences/">
+                http://code.notsoclever.cc/camel-release-package-version-differences/
+            </a>
+        </h5>
+
         <p>
             Older Version: <select name="option" ng-model="v1" ng-options="o for o in optionsList"></select>
 
