add jquery and test

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Camel Package Version Diff Engine</title>
+    <script src="js/jquery.js"></script>
     <script src="lib/angular.min.107.js"></script>
     <script src="lib/bootstrap/js/bootstrap.js"></script>
     <script src="js/lib/angular-table.js"></script>
