--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -52,7 +52,7 @@
     </form>
     <p>
 
-    <h3>Added Packages</h3>
+    <h3>Added Packages ({{ added.length }})</h3>
     <br/>
     <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="example">
         <tr ng-repeat="(key, value) in added">
@@ -63,7 +63,7 @@
 
     <p/>
 
-    <h3>Dropped Packages</h3>
+    <h3>Dropped Packages ({{ dropped.length }})</h3>
     <br/>
     <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="example">
         <tr ng-repeat="(key, value) in dropped">
@@ -73,7 +73,7 @@
     </table>
     <p/>
 
-    <h3>Changed Packages</h3>
+    <h3>Changed Packages ({{ changed.length }})</h3>
     <br/>
     <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="example">
         <tr ng-repeat="pkg in changed">
@@ -83,7 +83,7 @@
         </tr>
     </table>
 
-    <h3>Unchanged Packages</h3>
+    <h3>Unchanged Packages ({{  unchanged.length }})</h3>
     <br/>
     <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="unchanged">
         <tr ng-repeat="(key, value) in unchanged">
