--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -52,7 +52,7 @@
     </form>
     <p>
 
-    <h3>Added Packages ({{ Object.keys(added).length }})</h3>
+    <h3>Added Packages ({{ added.keys().length }})</h3>
     <br/>
     <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="example">
         <tr ng-repeat="(key, value) in added">
