--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -54,7 +54,7 @@
 
     <h3>Added Packages ({{ addedCount }})</h3>
     <br/>
-    <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="example">
+    <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="added">
         <tr ng-repeat="(key, value) in added">
             <td> {{key}}</td>
             <td> {{ value }}</td>
@@ -65,7 +65,7 @@
 
     <h3>Dropped Packages ({{ droppedCount }})</h3>
     <br/>
-    <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="example">
+    <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="dropped">
         <tr ng-repeat="(key, value) in dropped">
             <td> {{key}}</td>
             <td> {{ value }}</td>
@@ -75,7 +75,7 @@
 
     <h3>Changed Packages ({{ changed.length }})</h3>
     <br/>
-    <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="example">
+    <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="changed">
         <tr ng-repeat="pkg in changed">
             <td> {{pkg[0]}}</td>
             <td> {{pkg[1]}}</td>
