adding support for version params in the url

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" ng-app xmlns="http://www.w3.org/1999/html">
+<html lang="en" ng-app="myApp" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="utf-8">
     <title>Camel Package Version Diff Engine</title>
