--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -16,7 +16,7 @@
          display: none;
       }
    </style>
-   <!-- disabling this during tests
+
        <script>
            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -27,7 +27,7 @@
            ga('send', 'pageview');
 
        </script>
-   -->
+
 
 </head>
 
@@ -38,14 +38,13 @@
 
       <h1> {{orgName}}/{{projectName}} Dependencies Version Differences</h1>
       <br/>
-      <!-- may need to update the location
               <h5>
 
                   <a href="http://code.notsoclever.cc/camel-release-package-version-differences/">
                       http://code.notsoclever.cc/camel-release-package-version-differences/
                   </a>
+                 <a href="https://github.com/tjsnell/vdiff">https://github.com/tjsnell/vdiff</a>
               </h5>
-      -->
       <p>
          Older Version: <select name="option" ng-model="v1" ng-options="o for o in optionsList1" ng-change="changed1()">
          <option value="">-- choose version --</option>
