--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,13 +3,16 @@
 <head>
    <meta charset="utf-8">
    <title>Package Version Diff Engine</title>
-   <script src="js/jquery.js"></script>
-   <script src="lib/angular.min.107.js"></script>
-   <script src="lib/bootstrap/js/bootstrap.js"></script>
-   <script src="js/lib/angular-table.js"></script>
-   <script src="DiffCtrl.js"></script>
-   <linK href="lib/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css"/>
-   <link href="css/lib/angular-table.css" rel="stylesheet" type="text/css"/>
+   <script src="/js/jquery.js"></script>
+   <script src="/lib/angular.min.107.js"></script>
+   <script src="/lib/angular-cookies.min.js"></script>
+   <script src="/lib/bootstrap/js/bootstrap.min.js"></script>
+   <script src="/js/lib/angular-table.js"></script>
+   <script src="/DiffCtrl.js"></script>
+   <linK href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+   <linK href="/lib/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet" type="text/css"/>
+   <link href="/css/lib/angular-table.css" rel="stylesheet" type="text/css"/>
+   <link href="/css/vdiff.css" rel="stylesheet" type="text/css"/>
    <style>
       /* Hide Angular JS elements before initializing */
       .ng-cloak {
@@ -17,16 +20,23 @@
       }
    </style>
 
-       <script>
-           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-               (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-                   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-           })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+   <script>
+      (function (i, s, o, g, r, a, m) {
+         i['GoogleAnalyticsObject'] = r;
+         i[r] = i[r] || function () {
+            (i[r].q = i[r].q || []).push(arguments)
+         }, i[r].l = 1 * new Date();
+         a = s.createElement(o),
+               m = s.getElementsByTagName(o)[0];
+         a.async = 1;
+         a.src = g;
+         m.parentNode.insertBefore(a, m)
+      })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-           ga('create', 'UA-44004299-1', 'notsoclever.cc');
-           ga('send', 'pageview');
+      ga('create', 'UA-44004299-1', 'notsoclever.cc');
+      ga('send', 'pageview');
 
-       </script>
+   </script>
 
 
 </head>
@@ -38,86 +48,159 @@
 
       <h1> {{orgName}}/{{projectName}} Dependencies Version Differences</h1>
       <br/>
-              <h5>
+      <h5>
 
-                  <a href="http://code.notsoclever.cc/camel-release-package-version-differences/">
-                      http://code.notsoclever.cc/camel-release-package-version-differences/
-                  </a>
-                 <p></p>
-                 <a href="https://github.com/tjsnell/vdiff">https://github.com/tjsnell/vdiff</a>
-              </h5>
+         <a href="http://code.notsoclever.cc/camel-release-package-version-differences/">
+            http://code.notsoclever.cc/camel-release-package-version-differences/
+         </a>
+
+         <p></p>
+         <a href="https://github.com/tjsnell/vdiff">https://github.com/tjsnell/vdiff</a>
+      </h5>
       <p>
-         Older Version: <select name="option" ng-model="v1" ng-options="o for o in optionsList1" ng-change="changed1()">
-         <option value="">-- choose version --</option>
-      </select>
-      <p>
-         Newer Version: <select name="option" ng-model="v2" ng-options="o for o in optionsList2" ng-change="changed2()">
-         <option value="">-- choose version --</option>
-      </select>
+
+
+      <form class="form-horizontal" role="form">
+
+         <div class="form-group form-group-lg">
+            <div class="row">
+               <label class="col-md-2 control-label">Older Version</label>
+
+               <div class="col-md-4">
+                  <select name="option" ng-model="ver1"
+                          ng-options="o for o in optionsList1"
+                          class="form-control"
+                          ng-change="changed1()">
+                     <option value="">-- choose version --</option>
+                  </select>
+               </div>
+            </div>
+         </div>
+         <div class="form-group form-group-lg">
+            <div class="row">
+               <label class="col-sm-2 control-label">Newer Version</label>
+
+               <div class="col-sm-4">
+                  <select name="option" ng-model="ver2" ng-options="o for o in optionsList2" class="form-control"
+                          ng-change="changed2()">
+                     <option value="">-- choose version --</option>
+                  </select>
+               </div>
+            </div>
+         </div>
+      </form>
       <p>
             <span class="btn btn-success fileinput-button" ng-class="{disabled: disabled}" ng-click="diff()">
-                    <i class="glyphicon glyphicon-plus"></i>
+                    <i class="glyphicon glyphicon-play"></i>
                     <span>Diff</span>
             </span>
    </form>
    <p>
 
-   <h3>Added Packages ({{ addedCount }})</h3>
-   <br/>
-   <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="added">
-      <tr>
-         <th>Name</th>
-         <th>Version</th>
-      </tr>
-      <tr ng-repeat="(key, value) in added">
-         <td> {{key}}</td>
-         <td> {{ value }}</td>
-      </tr>
-   </table>
+   <div class="panel-group" id="accordion">
+      <div class="panel panel-default" id="panel1">
+         <div class="panel-heading">
+            <h4 class="panel-title">
+               <a ng-click="toggleAdded()">
+                  <span class="glyphicon glyphicon-chevron-right" ng-show="!showAdded"></span>
+                  <span class="glyphicon glyphicon-chevron-down" ng-show="showAdded"></span>
+                  Added Packages ({{ addedCount }})
+               </a>
+            </h4>
+         </div>
+         <div ng-show="showAdded" class="animate-show">
 
-   <p/>
+            <table cellpadding="0" cellspacing="0" border="0" class="table table-striped" id="added">
+               <tr>
+                  <th>Name</th>
+                  <th>Version</th>
+               </tr>
+               <tr ng-repeat="(key, value) in added">
+                  <td> {{key}}</td>
+                  <td> {{ value }}</td>
+               </tr>
+            </table>
+         </div>
+      </div>
 
-   <h3>Dropped Packages ({{ droppedCount }})</h3>
-   <br/>
-   <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="dropped">
-      <tr>
-         <th>Name</th>
-         <th>Version</th>
-      </tr>
-      <tr ng-repeat="(key, value) in dropped">
-         <td> {{key}}</td>
-         <td> {{ value }}</td>
-      </tr>
-   </table>
-   <p/>
+      <div class="panel panel-default" id="panel2">
+         <div class="panel-heading">
+            <h4 class="panel-title">
+               <a ng-click="toggleDropped()">
+                  <span class="glyphicon glyphicon-chevron-right" ng-show="!showDropped"></span>
+                  <span class="glyphicon glyphicon-chevron-down" ng-show="showDropped"></span>
+                  Dropped Packages ({{ droppedCount }})
+               </a>
+            </h4>
+         </div>
+         <div ng-show="showDropped" class="animate-show">
+            <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered"
+                   id="dropped">
+               <tr>
+                  <th>Name</th>
+                  <th>Version</th>
+               </tr>
+               <tr ng-repeat="(key, value) in dropped">
+                  <td> {{key}}</td>
+                  <td> {{ value }}</td>
+               </tr>
+            </table>
+            <p/>
+         </div>
+      </div>
 
-   <h3>Changed Packages ({{ changed.length }})</h3>
-   <br/>
-   <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="changed">
-      <tr>
-         <th>Name</th>
-         <th>Old Version</th>
-         <th>New Version</th>
-      </tr>
-      <tr ng-repeat="pkg in changed">
-         <td> {{pkg[0]}}</td>
-         <td> {{pkg[1]}}</td>
-         <td> {{pkg[2]}}</td>
-      </tr>
-   </table>
+      <div class="panel panel-default" id="panel3">
+         <div class="panel-heading">
+            <h4 class="panel-title">
+               <a ng-click="toggleChanged()">
+                  <span class="glyphicon glyphicon-chevron-right" ng-show="!showChanged"></span>
+                  <span class="glyphicon glyphicon-chevron-down" ng-show="showChanged"></span>
+                  Changed Packages ({{ changed.length }})
+               </a>
+            </h4>
+         </div>
+         <div ng-show="showChanged" class="animate-show">
+            <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered"
+                   id="changed">
+               <tr>
+                  <th>Name</th>
+                  <th>Old Version</th>
+                  <th>New Version</th>
+               </tr>
+               <tr ng-repeat="pkg in changed">
+                  <td> {{pkg[0]}}</td>
+                  <td> {{pkg[1]}}</td>
+                  <td> {{pkg[2]}}</td>
+               </tr>
+            </table>
+         </div>
+      </div>
 
-   <h3>Unchanged Packages ({{ unchangedCount }})</h3>
-   <br/>
-   <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="unchanged">
-      <tr>
-         <th>Name</th>
-         <th>Version</th>
-      </tr>
-      <tr ng-repeat="(key, value) in unchanged">
-         <td> {{key}}</td>
-         <td> {{ value }}</td>
-      </tr>
-   </table>
+      <div class="panel panel-default" id="panel4">
+         <div class="panel-heading">
+            <h4 class="panel-title">
+               <a ng-click="toggleUnchanged()">
+                  <span class="glyphicon glyphicon-chevron-right" ng-show="!showUnchanged"></span>
+                  <span class="glyphicon glyphicon-chevron-down" ng-show="showUnchanged"></span>
+                  Unchanged Packages ({{ unchangedCount }})
+               </a>
+            </h4>
+         </div>
+         <div ng-show="showUnchanged" class="animate-show">
+            <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered"
+                   id="unchanged">
+               <tr>
+                  <th>Name</th>
+                  <th>Version</th>
+               </tr>
+               <tr ng-repeat="(key, value) in unchanged">
+                  <td> {{key}}</td>
+                  <td> {{ value }}</td>
+               </tr>
+            </table>
+         </div>
+      </div>
+   </div>
 </div>
 </body>
 </html>
