support for branches and tags

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -41,25 +41,39 @@
 
 </head>
 
-<body ng-controller="DiffCtrl" data-ng-init="init()">
+<body ng-controller="DiffCtrl">
 <div class="container">
-   <form ng-submit="diff()">
+
+{{ active_tab }} -- {{ loading }} - {{ !loading }}
+<p>
+   {{ foobar }}
+</p>
+<p>
+
+<h1> {{orgName}}/{{projectName}} Dependencies Version Differences</h1>
+<br/>
+<h5>
+
+   <a href="http://code.notsoclever.cc/camel-release-package-version-differences/">
+      http://code.notsoclever.cc/camel-release-package-version-differences/
+   </a>
+
+   <p></p>
+   <a href="https://github.com/tjsnell/vdiff">https://github.com/tjsnell/vdiff</a>
+</h5>
+<p>
+
+
+<ul class="nav nav-tabs" id="myTab">
+   <li ng-class="{active: active_tab == 'tags'}" ng-click="active_tab = 'tags'"><a href="javascript:void(0)">Tags</a>
+   </li>
+   <li ng-class="{active: active_tab == 'branches'}" ng-click="active_tab = 'branches'"><a href="javascript:void(0)">Branches</a>
+   </li>
+</ul>
+
+<div id='content' class="tab-content">
+   <div ng-class="{active: active_tab == 'tags'}" class="tab-pane" id="tags">
       <p>
-
-      <h1> {{orgName}}/{{projectName}} Dependencies Version Differences</h1>
-      <br/>
-      <h5>
-
-         <a href="http://code.notsoclever.cc/camel-release-package-version-differences/">
-            http://code.notsoclever.cc/camel-release-package-version-differences/
-         </a>
-
-         <p></p>
-         <a href="https://github.com/tjsnell/vdiff">https://github.com/tjsnell/vdiff</a>
-      </h5>
-      <p>
-
-
       <form class="form-horizontal" role="form">
 
          <div class="form-group form-group-lg">
@@ -67,11 +81,11 @@
                <label class="col-md-2 control-label">Older Version</label>
 
                <div class="col-md-4">
-                  <select name="option" ng-model="ver1"
-                          ng-options="o for o in optionsList1"
+                  <select name="option" ng-model="oldTag"
+                          ng-options="obj for obj in oldTagsList"
                           class="form-control"
-                          ng-change="changed1()">
-                     <option value="">-- choose version --</option>
+                          ng-change="oldTagUpdate()">
+                     <option value="">-- choose tag --</option>
                   </select>
                </div>
             </div>
@@ -81,118 +95,161 @@
                <label class="col-sm-2 control-label">Newer Version</label>
 
                <div class="col-sm-4">
-                  <select name="option" ng-model="ver2" ng-options="o for o in optionsList2" class="form-control"
-                          ng-change="changed2()">
-                     <option value="">-- choose version --</option>
+                  <select name="option" ng-model="newTag"
+                          ng-options="obj for obj in newTagsList"
+                          class="form-control"
+                          ng-change="newTagUpdate()">
+                     <option value="">-- choose tag --</option>
                   </select>
                </div>
             </div>
          </div>
       </form>
+   </div>
+
+   <div ng-class="{active: active_tab == 'branches'}" class="tab-pane" id="branches">
       <p>
+      <form class="form-horizontal" role="form">
+
+         <div class="form-group form-group-lg">
+            <div class="row">
+               <label class="col-md-2 control-label">Older Version</label>
+
+               <div class="col-md-4">
+                  <select name="option" ng-model="oldBranch"
+                          ng-options="obj for obj in oldBranchesList"
+                          class="form-control"
+                          ng-change="oldBranchUpdate()">
+                     <option value="">-- choose branch --</option>
+                  </select>
+               </div>
+            </div>
+         </div>
+         <div class="form-group form-group-lg">
+            <div class="row">
+               <label class="col-sm-2 control-label">Newer Version</label>
+
+               <div class="col-sm-4">
+                  <select name="option" ng-model="newBranch"
+                          ng-options="obj for obj in newBranchesList"
+                          class="form-control"
+                          ng-change="newBranchUpdate()">
+                     <option value="">-- choose branch --</option>
+                  </select>
+               </div>
+            </div>
+         </div>
+      </form>
+
+   </div>
+
+</div>
+<!--</form>-->
+
+<p>
             <span class="btn btn-success fileinput-button" ng-class="{disabled: disabled}" ng-click="diff()">
                     <i class="glyphicon glyphicon-play"></i>
                     <span>Diff</span>
             </span>
-   </form>
-   <p>
 
-   <div class="panel-group" id="accordion">
-      <div class="panel panel-default" id="panel1">
-         <div class="panel-heading" ng-click="toggleAdded()">
-            <h4 class="panel-title">
-                  <span class="glyphicon glyphicon-chevron-right" ng-show="!showAdded"></span>
-                  <span class="glyphicon glyphicon-chevron-down" ng-show="showAdded"></span>
-                  Added Packages ({{ addedCount }})
-            </h4>
-         </div>
-         <div ng-show="showAdded" class="animate-show">
+<p>
 
-            <table cellpadding="0" cellspacing="0" border="0" class="table table-striped" id="added">
-               <tr>
-                  <th>Name</th>
-                  <th>Version</th>
-               </tr>
-               <tr ng-repeat="(key, value) in added">
-                  <td> {{key}}</td>
-                  <td> {{ value }}</td>
-               </tr>
-            </table>
-         </div>
+<div class="panel-group" id="accordion">
+   <div class="panel panel-default" id="panel1">
+      <div class="panel-heading" ng-click="toggleAdded()">
+         <h4 class="panel-title">
+            <span class="glyphicon glyphicon-chevron-right" ng-show="!showAdded"></span>
+            <span class="glyphicon glyphicon-chevron-down" ng-show="showAdded"></span>
+            Added Packages ({{ addedCount }})
+         </h4>
       </div>
+      <div ng-show="showAdded" class="animate-show">
 
-      <div class="panel panel-default" id="panel2">
-         <div class="panel-heading" ng-click="toggleDropped()">
-            <h4 class="panel-title">
-                  <span class="glyphicon glyphicon-chevron-right" ng-show="!showDropped"></span>
-                  <span class="glyphicon glyphicon-chevron-down" ng-show="showDropped"></span>
-                  Dropped Packages ({{ droppedCount }})
-            </h4>
-         </div>
-         <div ng-show="showDropped" class="animate-show">
-            <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered"
-                   id="dropped">
-               <tr>
-                  <th>Name</th>
-                  <th>Version</th>
-               </tr>
-               <tr ng-repeat="(key, value) in dropped">
-                  <td> {{key}}</td>
-                  <td> {{ value }}</td>
-               </tr>
-            </table>
-            <p/>
-         </div>
-      </div>
-
-      <div class="panel panel-default" id="panel3">
-         <div class="panel-heading" ng-click="toggleChanged()">
-            <h4 class="panel-title">
-                  <span class="glyphicon glyphicon-chevron-right" ng-show="!showChanged"></span>
-                  <span class="glyphicon glyphicon-chevron-down" ng-show="showChanged"></span>
-                  Changed Packages ({{ changed.length }})
-            </h4>
-         </div>
-         <div ng-show="showChanged" class="animate-show">
-            <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered"
-                   id="changed">
-               <tr>
-                  <th>Name</th>
-                  <th>Old Version</th>
-                  <th>New Version</th>
-               </tr>
-               <tr ng-repeat="pkg in changed">
-                  <td> {{pkg[0]}}</td>
-                  <td> {{pkg[1]}}</td>
-                  <td> {{pkg[2]}}</td>
-               </tr>
-            </table>
-         </div>
-      </div>
-
-      <div class="panel panel-default" id="panel4">
-         <div class="panel-heading" ng-click="toggleUnchanged()">
-            <h4 class="panel-title">
-                  <span class="glyphicon glyphicon-chevron-right" ng-show="!showUnchanged"></span>
-                  <span class="glyphicon glyphicon-chevron-down" ng-show="showUnchanged"></span>
-                  Unchanged Packages ({{ unchangedCount }})
-            </h4>
-         </div>
-         <div ng-show="showUnchanged" class="animate-show">
-            <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered"
-                   id="unchanged">
-               <tr>
-                  <th>Name</th>
-                  <th>Version</th>
-               </tr>
-               <tr ng-repeat="(key, value) in unchanged">
-                  <td> {{key}}</td>
-                  <td> {{ value }}</td>
-               </tr>
-            </table>
-         </div>
+         <table cellpadding="0" cellspacing="0" border="0" class="table table-striped" id="added">
+            <tr>
+               <th>Name</th>
+               <th>Version</th>
+            </tr>
+            <tr ng-repeat="(key, value) in added">
+               <td> {{key}}</td>
+               <td> {{ value }}</td>
+            </tr>
+         </table>
       </div>
    </div>
+
+   <div class="panel panel-default" id="panel2">
+      <div class="panel-heading" ng-click="toggleDropped()">
+         <h4 class="panel-title">
+            <span class="glyphicon glyphicon-chevron-right" ng-show="!showDropped"></span>
+            <span class="glyphicon glyphicon-chevron-down" ng-show="showDropped"></span>
+            Dropped Packages ({{ droppedCount }})
+         </h4>
+      </div>
+      <div ng-show="showDropped" class="animate-show">
+         <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered"
+                id="dropped">
+            <tr>
+               <th>Name</th>
+               <th>Version</th>
+            </tr>
+            <tr ng-repeat="(key, value) in dropped">
+               <td> {{key}}</td>
+               <td> {{ value }}</td>
+            </tr>
+         </table>
+         <p/>
+      </div>
+   </div>
+
+   <div class="panel panel-default" id="panel3">
+      <div class="panel-heading" ng-click="toggleChanged()">
+         <h4 class="panel-title">
+            <span class="glyphicon glyphicon-chevron-right" ng-show="!showChanged"></span>
+            <span class="glyphicon glyphicon-chevron-down" ng-show="showChanged"></span>
+            Changed Packages ({{ changed.length }})
+         </h4>
+      </div>
+      <div ng-show="showChanged" class="animate-show">
+         <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered"
+                id="changed">
+            <tr>
+               <th>Name</th>
+               <th>Old Version</th>
+               <th>New Version</th>
+            </tr>
+            <tr ng-repeat="pkg in changed">
+               <td> {{pkg[0]}}</td>
+               <td> {{pkg[1]}}</td>
+               <td> {{pkg[2]}}</td>
+            </tr>
+         </table>
+      </div>
+   </div>
+
+   <div class="panel panel-default" id="panel4">
+      <div class="panel-heading" ng-click="toggleUnchanged()">
+         <h4 class="panel-title">
+            <span class="glyphicon glyphicon-chevron-right" ng-show="!showUnchanged"></span>
+            <span class="glyphicon glyphicon-chevron-down" ng-show="showUnchanged"></span>
+            Unchanged Packages ({{ unchangedCount }})
+         </h4>
+      </div>
+      <div ng-show="showUnchanged" class="animate-show">
+         <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered"
+                id="unchanged">
+            <tr>
+               <th>Name</th>
+               <th>Version</th>
+            </tr>
+            <tr ng-repeat="(key, value) in unchanged">
+               <td> {{key}}</td>
+               <td> {{ value }}</td>
+            </tr>
+         </table>
+      </div>
+   </div>
+</div>
 </div>
 </body>
 </html>
