--- a/src/main/webapp/diff.html
+++ b/src/main/webapp/diff.html
@@ -47,11 +47,11 @@
               </h5>
       -->
       <p>
-         Older Version: <select name="option" ng-model="v1" ng-options="o for o in optionsList1" ng-change="changed1()">
+         Older Version: <select name="option" ng-model="v1" ng-options="o for o in optionsList1" ng-change="oldTag()">
          <option value="">-- choose version --</option>
       </select>
       <p>
-         Newer Version: <select name="option" ng-model="v2" ng-options="o for o in optionsList2" ng-change="changed2()">
+         Newer Version: <select name="option" ng-model="v2" ng-options="o for o in optionsList2" ng-change="newTag()">
          <option value="">-- choose version --</option>
       </select>
       <p>
